scores are now as good as possible

--- a/Advanced Stats.ipynb
+++ b/Advanced Stats.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Data from WhoScored.com"
+    "# Get Data from WhoScored.com"
    ]
   },
   {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -217,29 +217,33 @@
     "    file = \"Data/Advanced_stats/whoscored_\" + (year[:4] + \"+\" + year[5:] + '.json')\n",
     "    with open(file, 'r', encoding=\"utf8\") as stat_file:\n",
     "        stat_data = json.load(stat_file)  \n",
-    "    first_names = {}\n",
-    "    last_names = {}\n",
+    "    names = {}\n",
     "    for i, player in enumerate(stat_data[\"playerTableStats\"]):\n",
     "        name = player[\"name\"]\n",
-    "        first_name = name.split(\" \")[0]\n",
-    "        last_name = name.split(\" \")[-1]\n",
-    "        if first_name not in first_names:\n",
-    "            first_names.update({first_name: [i]})\n",
+    "        if name not in names:\n",
+    "            names.update({name: [i]})\n",
     "        else:\n",
-    "            first_names[first_name].append(i)\n",
-    "        if last_name not in last_names:\n",
-    "            last_names.update({last_name: [i]})\n",
-    "        else:\n",
-    "            last_names[last_name].append(i)\n",
-    "        stat_data[\"first_names\"] = first_names\n",
-    "        stat_data[\"last_names\"] = last_names\n",
+    "            names[name].append(i)\n",
+    "    stat_data[\"names\"] = names\n",
     "    with open(file, 'w', encoding=\"utf8\") as json_data:\n",
     "        json.dump(stat_data, json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for player in data[\"elements\"]: \n",
+    "    player[\"history\"] = player[\"history\"][\"history_past\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -248,20 +252,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3820\n",
-      "3812\n"
+      "5110\n",
+      "11965\n"
      ]
     }
    ],
    "source": [
-    "stats = [\"apps\", \"minsPlayed\", \"keyPassPerGame\", \"dribbleWonPerGame\"]\n",
+    "stats = [\"apps\", \"minsPlayed\", \"keyPassPerGame\", \"dribbleWonPerGame\", \"dispossessedPerGame\"]\n",
     "\n",
     "hits = 0\n",
     "misses = 0\n",
     "\n",
     "for player in data[\"elements\"]:\n",
     "    for year in years:\n",
-    "        if year in player[\"history\"][\"history_past\"]:\n",
+    "        if year in player[\"history\"]:\n",
     "            file = \"Data/Advanced_Stats/whoscored\" + \"_\" + (year[:4] + \"+\" + year[5:] + \".json\")\n",
     "            with open(file, 'r') as stat_file:\n",
     "                stat_data = json.load(stat_file)  \n",
@@ -269,16 +273,16 @@
     "                ##Petr crouch\n",
     "                ##\"content[0]\":\"owner\":\"altIds\": {\"opta\": \"p3773\"\n",
     "                #data[elements][335][code]\n",
-    "                by_first = stat_data[\"first_names\"].get(player[\"first_name\"])\n",
-    "                by_last = stat_data[\"last_names\"].get(player[\"second_name\"])\n",
-    "                if by_first is not None and by_last is not None:\n",
-    "                    intersection = list(set(by_first).intersection(by_last))\n",
-    "                    if (len(intersection)>0) :\n",
-    "                        hits += 1\n",
-    "                        index = intersection[0]\n",
-    "                        player[\"history\"][\"history_past\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
-    "                        if (len(intersection)>1):\n",
-    "                            print(\"OMG\\nOMG\\nOMG\\nOMG\\nOMG\\n\")\n",
+    "                by_web = stat_data[\"names\"].get(player[\"web_name\"])\n",
+    "                by_name = stat_data[\"names\"].get(player[\"name\"])\n",
+    "                if by_name is not None:\n",
+    "                    index = by_name[0]\n",
+    "                    hits += 1\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                elif by_web is not None:\n",
+    "                    index = by_web[0]\n",
+    "                    hits += 1\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -286,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -295,14 +299,17 @@
     "hits = 0\n",
     "misses = 0\n",
     "for player in data[\"elements\"]:\n",
-    "    for year in player[\"history\"][\"history_past\"]:\n",
-    "        if player[\"history\"][\"history_past\"][year].get(\"apps\"):\n",
-    "            if player[\"history\"][\"history_past\"][year].get(\"dribbleWonPerGame\"):\n",
+    "    for year in player[\"history\"]:\n",
+    "        if player[\"history\"][year].get(\"apps\"):\n",
+    "            if player[\"history\"][year].get(\"dribbleWonPerGame\"):\n",
     "                hits+=1\n",
-    "                player[\"history\"][\"history_past\"][year][\"successful_dribbles\"] = player[\"history\"][\"history_past\"][year][\"apps\"] * player[\"history\"][\"history_past\"][year][\"dribbleWonPerGame\"]\n",
-    "            if player[\"history\"][\"history_past\"][year].get(\"keyPassPerGame\"):\n",
-    "                player[\"history\"][\"history_past\"][year][\"key_passes\"] = player[\"history\"][\"history_past\"][year][\"apps\"] * player[\"history\"][\"history_past\"][year][\"keyPassPerGame\"]\n",
-    "        else: misses+=1"
+    "                player[\"history\"][year][\"successful_dribbles\"] = player[\"history\"][year][\"apps\"] * player[\"history\"][year][\"dribbleWonPerGame\"]\n",
+    "            if player[\"history\"][year].get(\"keyPassPerGame\"):\n",
+    "                player[\"history\"][year][\"key_passes\"] = player[\"history\"][year][\"apps\"] * player[\"history\"][year][\"keyPassPerGame\"]\n",
+    "            if player[\"history\"][year].get(\"dispossessedPerGame\"):\n",
+    "                player[\"history\"][year][\"dispossessed_total\"] = player[\"history\"][year][\"apps\"] * player[\"history\"][year][\"dispossessedPerGame\"]\n",
+    "        else: \n",
+    "            misses+=1"
    ]
   },
   {
@@ -343,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -355,29 +362,21 @@
     "    file = \"Data/Advanced_stats/who_aerial_\" + (year[:4] + \"+\" + year[5:] + '.json')\n",
     "    with open(file, 'r', encoding=\"utf8\") as stat_file:\n",
     "        stat_data = json.load(stat_file)  \n",
-    "    first_names = {}\n",
-    "    last_names = {}\n",
+    "    names = {}\n",
     "    for i, player in enumerate(stat_data[\"playerTableStats\"]):\n",
     "        name = player[\"name\"]\n",
-    "        first_name = name.split(\" \")[0]\n",
-    "        last_name = name.split(\" \")[-1]\n",
-    "        if first_name not in first_names:\n",
-    "            first_names.update({first_name: [i]})\n",
+    "        if name not in names:\n",
+    "            names.update({name: [i]})\n",
     "        else:\n",
-    "            first_names[first_name].append(i)\n",
-    "        if last_name not in last_names:\n",
-    "            last_names.update({last_name: [i]})\n",
-    "        else:\n",
-    "            last_names[last_name].append(i)\n",
-    "        stat_data[\"first_names\"] = first_names\n",
-    "        stat_data[\"last_names\"] = last_names\n",
+    "            names[name].append(i)\n",
+    "    stat_data[\"names\"] = names\n",
     "    with open(file, 'w', encoding=\"utf8\") as json_data:\n",
     "        json.dump(stat_data, json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -386,8 +385,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "963\n",
-      "945\n"
+      "1032\n",
+      "2383\n"
      ]
     }
    ],
@@ -399,25 +398,24 @@
     "\n",
     "for player in data[\"elements\"]:\n",
     "    for year in years:\n",
-    "        if year in player[\"history\"][\"history_past\"]:\n",
-    "            file = \"Data/Advanced_Stats/who_aerial\" + \"_\" + (year[:4] + \"+\" + year[5:] + \".json\")\n",
+    "        if year in years:\n",
+    "            file = \"Data/Advanced_Stats/who_aerial_\" + (year[:4] + \"+\" + year[5:] + \".json\")\n",
     "            with open(file, 'r') as stat_file:\n",
     "                stat_data = json.load(stat_file)  \n",
     "            for stat in stats:                 \n",
     "                ##Petr crouch\n",
     "                ##\"content[0]\":\"owner\":\"altIds\": {\"opta\": \"p3773\"\n",
     "                #data[elements][335][code]\n",
-    "                by_first = stat_data[\"first_names\"].get(player[\"first_name\"])\n",
-    "                by_last = stat_data[\"last_names\"].get(player[\"second_name\"])\n",
-    "                if by_first is not None and by_last is not None:\n",
-    "                    intersection = list(set(by_first).intersection(by_last))\n",
-    "                    if (len(intersection)>0) :\n",
-    "                        hits += 1\n",
-    "                        index = intersection[0]\n",
-    "                        player[\"history\"][\"history_past\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
-    "                        player[\"history\"][\"history_past\"][year][stat+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
-    "                        if (len(intersection)>1):\n",
-    "                            print(\"OMG\\nOMG\\nOMG\\nOMG\\nOMG\\n\")\n",
+    "                by_web = stat_data[\"names\"].get(player[\"web_name\"])\n",
+    "                by_name = stat_data[\"names\"].get(player[\"name\"])\n",
+    "                if by_name is not None:\n",
+    "                    index = by_name[0]\n",
+    "                    hits += 1\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                elif by_web is not None:\n",
+    "                    index = by_web[0]\n",
+    "                    hits += 1\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -428,18 +426,6 @@
    "metadata": {},
    "source": [
     "## WhoScored Passing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for player in data[\"elements\"]: \n",
-    "    player[\"history\"] = player[\"history\"][\"history_past\"]"
    ]
   },
   {
@@ -490,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -499,13 +485,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2973\n",
-      "7272\n"
+      "2070\n",
+      "4760\n"
      ]
     }
    ],
    "source": [
-    "stats = [\"apps\", \"accurateCrossesPerGame\", \"keyPassPerGame\"]\n",
+    "stats = [\"apps\", \"accurateCrossesPerGame\"]\n",
     "\n",
     "hits = 0\n",
     "misses = 0\n",
@@ -520,11 +506,17 @@
     "                ##Petr crouch\n",
     "                ##\"content[0]\":\"owner\":\"altIds\": {\"opta\": \"p3773\"\n",
     "                #data[elements][335][code]\n",
+    "                by_web = stat_data[\"names\"].get(player[\"web_name\"])\n",
     "                by_name = stat_data[\"names\"].get(player[\"name\"])\n",
     "                if by_name is not None:\n",
     "                    index = by_name[0]\n",
     "                    hits += 1\n",
-    "                    #print(year, index)\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    if stat !=\"apps\":\n",
+    "                        player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
+    "                elif by_web is not None:\n",
+    "                    index = by_web[0]\n",
+    "                    hits += 1\n",
     "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
     "                    if stat !=\"apps\":\n",
     "                        player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
@@ -588,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -597,8 +589,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3964\n",
-      "9696\n"
+      "4140\n",
+      "9520\n"
      ]
     }
    ],
@@ -619,13 +611,16 @@
     "                ##Petr crouch\n",
     "                ##\"content[0]\":\"owner\":\"altIds\": {\"opta\": \"p3773\"\n",
     "                #data[elements][335][code]\n",
+    "                by_web = stat_data[\"names\"].get(player[\"web_name\"])\n",
     "                by_name = stat_data[\"names\"].get(player[\"name\"])\n",
     "                if by_name is not None:\n",
     "                    index = by_name[0]\n",
     "                    hits += 1\n",
-    "                    #print(year, index)\n",
     "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
-    "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
+    "                elif by_web is not None:\n",
+    "                    index = by_web[0]\n",
+    "                    hits += 1\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -633,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
