--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 254,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 255,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
     "\"ontarget_scoring_att\": [2,2,2,2],\n",
     "\"accurateCrosses_total\": [1,1,1,1],\n",
     "\"successful_dribbles\": [1,1,1,1],\n",
-    "\"dispossessed\": [-0.5,-0.5,-0.5,-0.5],\n",
+    "\"dispossessed_total\": [-0.5,-0.5,-0.5,-0.5],\n",
     "\"own_goals\": [-9,-9,-9,-9],\n",
     "\"clean_sheets\": [0,1,6,8],\n",
     "\"saves\": [0,0,0,2],\n",
@@ -40,13 +40,13 @@
     "\"penalties_saved\": [0,0,0,8],\n",
     "\"yellow_cards\": [-3,-3,-3,-3],\n",
     "\"red_cards\": [-7,-7,-7,-7],\n",
-    "\"aerialWonPerGame_total\": [0.5,0.5,1,1],\n",
-    "\"interception_total\": [0,0,0.25,0.25]}"
+    "\"aerialWon_total\": [0.5,0.5,1,1],\n",
+    "\"clearance_total\": [0,0,0.25,0.25]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 265,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
     "                score += togga_scoring[stat][index]*player[\"history\"][season][stat]\n",
     "                player[\"history\"][season][stat + \"_score\"] = togga_scoring[stat][index]*player[\"history\"][season][stat]\n",
     "            else:\n",
-    "                player[\"history\"][season].update({stat:-1})\n",
+    "                player[\"history\"][season][stat+\"_score\"] = 0\n",
     "        player[\"history\"][season][\"togga_score\"] = score\n",
     "    # Set the scores to 0 if they have no history\n",
     "    if not (player[\"history\"].get(\"2015/16\")):\n",
@@ -78,19 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 266,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Hazard is 81\n",
     "with open('Data/example_player.json', 'w') as json_data:\n",
-    "    json.dump(data[\"elements\"][81], json_data)"
+    "    json.dump(data[\"elements\"][96], json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 267,
    "metadata": {
     "collapsed": true
    },
@@ -102,19 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('Data/positional.json', 'w') as json_data:\n",
-    "    json.dump(by_position, json_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 260,
    "metadata": {
     "collapsed": false
    },
@@ -127,11 +116,11 @@
     "            new_stats={}\n",
     "            for stat in player['history'][year]:\n",
     "                if stat in togga_scoring or stat in ['togga_score', 'apps', 'start_cost', 'end_cost', \n",
-    "                                                    'total_pass', 'minutes']:\n",
+    "                                                    'total_pass', 'minutes'] or stat in [x+\"_total\" for x in togga_scoring]:\n",
     "                    new_stats.update({stat: player['history'][year][stat]})  \n",
     "            bpcopy[position][i]['history'].update({year:new_stats.copy()})\n",
     "                \n",
-    "for year in ['2016/17', '2015/16', '2014/15', '2013/14', '2012/13']:\n",
+    "for year in ['2012/13', '2013/14', '2014/15', '2015/16', '2016/17']:\n",
     "    g = []\n",
     "    d = []\n",
     "    m = []\n",
@@ -172,159 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 259,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: Simon Mignolet\tscore:312.250000\n",
-      "name: Petr Cech\tscore:302.750000\n",
-      "name: Asmir Begovic\tscore:258.000000\n",
-      "name: Joe Hart\tscore:251.250000\n",
-      "name: David de Gea\tscore:214.000000\n",
-      "name: Ben Foster\tscore:195.000000\n",
-      "name: Michel Vorm\tscore:184.000000\n",
-      "name: Bradley Guzan\tscore:174.000000\n",
-      "name: Hugo Lloris\tscore:156.500000\n",
-      "name: Adam Federici\tscore:124.000000\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    name=sorted_goalies[i]['name']\n",
-    "    score=sorted_goalies[i]['history']['2012/13']['togga_score']\n",
-    "    print(\"name: %s\\tscore:%f\" % (name, score))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: Marcos Alonso\tscore:470.000000\n",
-      "name: Leighton Baines\tscore:350.250000\n",
-      "name: Kyle Walker\tscore:344.500000\n",
-      "name: José Holebas\tscore:319.500000\n",
-      "name: Christian Fuchs\tscore:316.750000\n",
-      "name: Chris Brunt\tscore:311.500000\n",
-      "name: Ryan Bertrand\tscore:307.000000\n",
-      "name: César Azpilicueta\tscore:305.750000\n",
-      "name: Gary Cahill\tscore:292.750000\n",
-      "name: Matthew Lowton\tscore:290.500000\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    name=sorted_defense[i]['name']\n",
-    "    score=sorted_defense[i]['history']['2016/17']['togga_score']\n",
-    "    print(\"name: %s\\tscore:%f\" % (name, score))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: Christian Eriksen\tscore:779.500000\n",
-      "name: Gylfi Sigurdsson\tscore:739.000000\n",
-      "name: Alexis Sánchez\tscore:583.000000\n",
-      "name: Mesut Özil\tscore:582.500000\n",
-      "name: James Milner\tscore:581.500000\n",
-      "name: Eden Hazard\tscore:570.500000\n",
-      "name: Philippe Coutinho\tscore:543.500000\n",
-      "name: Andros Townsend\tscore:500.500000\n",
-      "name: Ross Barkley\tscore:483.500000\n",
-      "name: Kevin De Bruyne\tscore:471.500000\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    name=sorted_midfield[i]['name']\n",
-    "    score=sorted_midfield[i]['history']['2016/17']['togga_score']\n",
-    "    print(\"name: %s\\tscore:%f\" % (name, score))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: Romelu Lukaku\tscore:543.500000\n",
-      "name: Harry Kane\tscore:529.000000\n",
-      "name: Christian Benteke\tscore:419.000000\n",
-      "name: Sergio Agüero\tscore:408.000000\n",
-      "name: Zlatan Ibrahimovic\tscore:402.500000\n",
-      "name: Jamie Vardy\tscore:315.500000\n",
-      "name: Fernando Llorente\tscore:310.500000\n",
-      "name: Troy Deeney\tscore:293.000000\n",
-      "name: Sam Vokes\tscore:288.000000\n",
-      "name: Álvaro Negredo\tscore:284.000000\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    name=sorted_forwards[i]['name']\n",
-    "    score=sorted_forwards[i]['history']['2016/17']['togga_score']\n",
-    "    print(\"name: %s\\tscore:%f\" % (name, score))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "2015+a = sorted(by_position[4], key=lambda k: k['history']['2015/16']['togga_score'], reverse=True)"
+    "with open('Data/positional.json', 'w') as json_data:\n",
+    "    json.dump(by_position, json_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-80-1329d6452ba0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mby_position\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'history'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'2016/17'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -334,6 +179,130 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Tom Heaton\tscore:301.500000\n",
+      "name: Hugo Lloris\tscore:255.000000\n",
+      "name: Petr Cech\tscore:250.500000\n",
+      "name: Jordan Pickford\tscore:248.750000\n",
+      "name: Thibaut Courtois\tscore:219.750000\n",
+      "name: Kasper Schmeichel\tscore:216.000000\n",
+      "name: Artur Boruc\tscore:210.250000\n",
+      "name: Lee Grant\tscore:201.500000\n",
+      "name: David de Gea\tscore:199.750000\n",
+      "name: Ben Foster\tscore:197.750000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    name=sorted_goalies[i]['name']\n",
+    "    score=sorted_goalies[i]['togga_score']\n",
+    "    print(\"name: %s\\tscore:%f\" % (name, score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Marcos Alonso\tscore:445.250000\n",
+      "name: César Azpilicueta\tscore:393.250000\n",
+      "name: Kyle Walker\tscore:371.500000\n",
+      "name: Gary Cahill\tscore:341.250000\n",
+      "name: Christian Fuchs\tscore:338.250000\n",
+      "name: Nicolás Otamendi\tscore:333.250000\n",
+      "name: Antonio Valencia\tscore:329.500000\n",
+      "name: Leighton Baines\tscore:328.250000\n",
+      "name: Jan Vertonghen\tscore:318.000000\n",
+      "name: Gareth McAuley\tscore:314.250000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    name=sorted_defense[i]['name']\n",
+    "    score=sorted_defense[i]['togga_score']\n",
+    "    print(\"name: %s\\tscore:%f\" % (name, score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Alexis Sánchez\tscore:678.000000\n",
+      "name: Christian Eriksen\tscore:655.500000\n",
+      "name: Eden Hazard\tscore:633.500000\n",
+      "name: Kevin De Bruyne\tscore:616.000000\n",
+      "name: Gylfi Sigurdsson\tscore:600.500000\n",
+      "name: Philippe Coutinho\tscore:507.500000\n",
+      "name: Mesut Özil\tscore:495.500000\n",
+      "name: Roberto Firmino\tscore:471.500000\n",
+      "name: James Milner\tscore:469.500000\n",
+      "name: Wilfried Zaha\tscore:447.500000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    name=sorted_midfield[i]['name']\n",
+    "    score=sorted_midfield[i]['togga_score']\n",
+    "    print(\"name: %s\\tscore:%f\" % (name, score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Harry Kane\tscore:560.000000\n",
+      "name: Romelu Lukaku\tscore:558.000000\n",
+      "name: Christian Benteke\tscore:433.500000\n",
+      "name: Sergio Agüero\tscore:430.500000\n",
+      "name: Zlatan Ibrahimovic\tscore:426.500000\n",
+      "name: Jamie Vardy\tscore:345.500000\n",
+      "name: Fernando Llorente\tscore:333.000000\n",
+      "name: Troy Deeney\tscore:329.000000\n",
+      "name: Álvaro Negredo\tscore:313.000000\n",
+      "name: Sam Vokes\tscore:299.500000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    name=sorted_forwards[i]['name']\n",
+    "    score=sorted_forwards[i]['togga_score']\n",
+    "    print(\"name: %s\\tscore:%f\" % (name, score))"
+   ]
   },
   {
    "cell_type": "code",
