rerun from start. stats as good as you can get

--- a/Advanced Stats.ipynb
+++ b/Advanced Stats.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +253,7 @@
      "output_type": "stream",
      "text": [
       "5110\n",
-      "11965\n"
+      "4615\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -411,11 +411,13 @@
     "                if by_name is not None:\n",
     "                    index = by_name[0]\n",
     "                    hits += 1\n",
-    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat] \n",
+    "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                elif by_web is not None:\n",
     "                    index = by_web[0]\n",
     "                    hits += 1\n",
     "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -476,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -580,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -617,10 +619,12 @@
     "                    index = by_name[0]\n",
     "                    hits += 1\n",
     "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                elif by_web is not None:\n",
     "                    index = by_web[0]\n",
     "                    hits += 1\n",
     "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                else: misses+=1\n",
     "print(hits)\n",
     "print(misses)"
@@ -628,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
