--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 294,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 295,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
     "togga_scoring = {\n",
     "\"goals_scored\": [9,9,10,10],\n",
     "\"assists\": [6,6,8,9],\n",
-    "\"keyPass_total\": [2,2,2,6],\n",
+    "\"key_passes\": [2,2,2,6],\n",
     "\"ontarget_scoring_att\": [2,2,2,2],\n",
     "\"accurateCrosses_total\": [1,1,1,1],\n",
     "\"successful_dribbles\": [1,1,1,1],\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 296,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 297,
    "metadata": {
     "collapsed": false
    },
@@ -86,12 +86,12 @@
    "source": [
     "# Hazard is 81\n",
     "with open('Data/example_player.json', 'w') as json_data:\n",
-    "    json.dump(data[\"elements\"][96], json_data)"
+    "    json.dump(data[\"elements\"][81], json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 298,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 300,
    "metadata": {
     "collapsed": false
    },
@@ -161,28 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 301,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "with open('Data/positional.json', 'w') as json_data:\n",
-    "    json.dump(by_position, json_data)"
+    "    json.dump(bpcopy, json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 302,
    "metadata": {
     "collapsed": false
    },
@@ -191,16 +182,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Tom Heaton\tscore:301.500000\n",
-      "name: Hugo Lloris\tscore:255.000000\n",
+      "name: Tom Heaton\tscore:283.500000\n",
       "name: Petr Cech\tscore:250.500000\n",
-      "name: Jordan Pickford\tscore:248.750000\n",
+      "name: Hugo Lloris\tscore:243.000000\n",
+      "name: Jordan Pickford\tscore:224.750000\n",
       "name: Thibaut Courtois\tscore:219.750000\n",
       "name: Kasper Schmeichel\tscore:216.000000\n",
-      "name: Artur Boruc\tscore:210.250000\n",
+      "name: Artur Boruc\tscore:204.250000\n",
       "name: Lee Grant\tscore:201.500000\n",
       "name: David de Gea\tscore:199.750000\n",
-      "name: Ben Foster\tscore:197.750000\n"
+      "name: Heurelho Gomes\tscore:188.250000\n"
      ]
     }
    ],
@@ -213,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 303,
    "metadata": {
     "collapsed": false
    },
@@ -222,16 +213,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Marcos Alonso\tscore:445.250000\n",
-      "name: César Azpilicueta\tscore:393.250000\n",
-      "name: Kyle Walker\tscore:371.500000\n",
-      "name: Gary Cahill\tscore:341.250000\n",
-      "name: Christian Fuchs\tscore:338.250000\n",
-      "name: Nicolás Otamendi\tscore:333.250000\n",
-      "name: Antonio Valencia\tscore:329.500000\n",
-      "name: Leighton Baines\tscore:328.250000\n",
-      "name: Jan Vertonghen\tscore:318.000000\n",
-      "name: Gareth McAuley\tscore:314.250000\n"
+      "name: Marcos Alonso\tscore:397.250000\n",
+      "name: César Azpilicueta\tscore:349.250000\n",
+      "name: Gary Cahill\tscore:331.250000\n",
+      "name: Nicolás Otamendi\tscore:321.250000\n",
+      "name: Laurent Koscielny\tscore:305.000000\n",
+      "name: Gareth McAuley\tscore:304.250000\n",
+      "name: Jan Vertonghen\tscore:304.000000\n",
+      "name: Steve Cook\tscore:293.500000\n",
+      "name: Kyle Walker\tscore:293.500000\n",
+      "name: Michael Keane\tscore:288.500000\n"
      ]
     }
    ],
@@ -244,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 304,
    "metadata": {
     "collapsed": false
    },
@@ -253,16 +244,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Alexis Sánchez\tscore:678.000000\n",
-      "name: Christian Eriksen\tscore:655.500000\n",
-      "name: Eden Hazard\tscore:633.500000\n",
-      "name: Kevin De Bruyne\tscore:616.000000\n",
-      "name: Gylfi Sigurdsson\tscore:600.500000\n",
-      "name: Philippe Coutinho\tscore:507.500000\n",
-      "name: Mesut Özil\tscore:495.500000\n",
-      "name: Roberto Firmino\tscore:471.500000\n",
-      "name: James Milner\tscore:469.500000\n",
-      "name: Wilfried Zaha\tscore:447.500000\n"
+      "name: Alexis Sánchez\tscore:522.000000\n",
+      "name: Eden Hazard\tscore:457.500000\n",
+      "name: Gylfi Sigurdsson\tscore:440.500000\n",
+      "name: Christian Eriksen\tscore:431.500000\n",
+      "name: Kevin De Bruyne\tscore:410.000000\n",
+      "name: Philippe Coutinho\tscore:377.500000\n",
+      "name: Wilfried Zaha\tscore:369.500000\n",
+      "name: Joshua King\tscore:358.000000\n",
+      "name: James Milner\tscore:357.500000\n",
+      "name: Michail Antonio\tscore:321.500000\n"
      ]
     }
    ],
@@ -275,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 305,
    "metadata": {
     "collapsed": false
    },
@@ -284,16 +275,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Harry Kane\tscore:560.000000\n",
-      "name: Romelu Lukaku\tscore:558.000000\n",
-      "name: Christian Benteke\tscore:433.500000\n",
-      "name: Sergio Agüero\tscore:430.500000\n",
-      "name: Zlatan Ibrahimovic\tscore:426.500000\n",
-      "name: Jamie Vardy\tscore:345.500000\n",
-      "name: Fernando Llorente\tscore:333.000000\n",
-      "name: Troy Deeney\tscore:329.000000\n",
-      "name: Álvaro Negredo\tscore:313.000000\n",
-      "name: Sam Vokes\tscore:299.500000\n"
+      "name: Harry Kane\tscore:478.000000\n",
+      "name: Romelu Lukaku\tscore:464.000000\n",
+      "name: Christian Benteke\tscore:369.500000\n",
+      "name: Sergio Agüero\tscore:368.500000\n",
+      "name: Diego Da Silva Costa\tscore:343.000000\n",
+      "name: Zlatan Ibrahimovic\tscore:330.500000\n",
+      "name: Jamie Vardy\tscore:283.500000\n",
+      "name: Fernando Llorente\tscore:281.000000\n",
+      "name: Sam Vokes\tscore:267.500000\n",
+      "name: Álvaro Negredo\tscore:261.000000\n"
      ]
     }
    ],
